# prism-ai-defender

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  assets.json.sample  check_tags.js  docker-compose.yml  next.config.js  package-lock.json  package.json  prd.md  todo.txt
mcp/Wazuh-MCP-Server/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MCP_COMPLIANCE_VERIFICATION.md  PRODUCTION_AUDIT_20251124.md  PRODUCTION_READINESS.md  README.md  WAZUH_COMPATIBILITY.md  compose.dev.yml  compose.yml  deploy-production.sh  deploy.bat  deploy.py  install.sh  pyproject.toml  requirements.txt
mcp/Wazuh-MCP-Server/.github/workflows/: branch-sync.yml  ci.yml  release.yml  security.yml  update-contributors.yml
mcp/Wazuh-MCP-Server/docs/: ADVANCED_FEATURES.md  CLAUDE_INTEGRATION.md  OPERATIONS.md  TROUBLESHOOTING.md  configuration.md
mcp/Wazuh-MCP-Server/docs/api/: README.md  agents.md  alerts.md  compliance-reporting.md  log-management.md  security-analysis.md  system-monitoring.md  vulnerabilities.md
mcp/Wazuh-MCP-Server/docs/security/: README.md
mcp/Wazuh-MCP-Server/installers/: install.py
mcp/Wazuh-MCP-Server/installers/platform/: install-arch.sh  install-debian.sh  install-fedora.sh  install-macos.sh
mcp/Wazuh-MCP-Server/src/wazuh_mcp_server/: __init__.py  __main__.py  auth.py  config.py  config_validator.py  fastmcp_stub.py  monitoring.py  oauth.py  resilience.py  security.py  server.py  session_store.py
mcp/Wazuh-MCP-Server/src/wazuh_mcp_server/api/: __init__.py  wazuh_client.py  wazuh_indexer.py
mcp/Wazuh-MCP-Server/tests/integration/: test_business_logic.py
mcp/Wazuh-MCP-Server/tools/: branch-sync.py  release-coordinator.py  setup-monorepo.py  version-manager.py
mcp/falcon-mcp/: .env.dev.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  gemini-extension.json  pyproject.toml
mcp/mcp-velociraptor/: .gitignore  Dockerfile  README.md  mcp_velociraptor_bridge.py  requirements.txt  test_api.py  velociraptor_api.py
mcp_server/: Dockerfile  mcp_wrapper.py
server/: builder.py  config_svc.py  main.py  mcp_dispatcher.py  models.py  monitor_runner.py  requirements.txt  sync_env.py  test_llm_api.py  worker.py
server/reports/: bug_20260228_092106.json
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BuilderChat.tsx  MarkdownText.tsx  (+3 more)
velociraptor-config/: .gitkeep  api.backup.client.yaml  api.client.yaml
(+74 files in other folders)
